--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@types/react-dom": "^18.0.9",
     "axios": "^1.2.0",
     "react": "^18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-select": "^5.6.1",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
   },
@@ -42,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-datepicker": "^4.8.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
