--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@types/react-dom": "^18.0.9",
     "@types/react-input-mask": "^3.0.2",
     "axios": "^1.2.0",
+    "javascript-time-ago": "^2.5.9",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-select": "^5.6.1",
+    "react-time-ago": "^7.2.1",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
   },
